--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cardiorespiratoryfilter">
+    package="com.healthdevicesresearchgroup.cardiorespiratoryanalyzer">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,9 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".dataplot"></activity>
-        <activity android:name=".Fileviewer" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.healthdevicesresearchgroup.cardiorespiratoryanalyzer.dataplot"></activity>
+        <activity android:name="com.healthdevicesresearchgroup.cardiorespiratoryanalyzer.Fileviewer" />
+        <activity android:name="com.healthdevicesresearchgroup.cardiorespiratoryanalyzer.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
